<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/chat_background_texture"
        tools:context=".activities.ChatRoomActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/chat_toolbar_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/chat_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/toolbar_user_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="start"
                        android:maxLines="1"
                        android:textAlignment="viewStart"
                        android:textDirection="locale"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/toolbar_item_picture"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlHardcoded" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/toolbar_item_picture"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <!--TODO: bring this back-->
        <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/accept_request_button_chat"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/colorAccent"-->
            <!--android:focusable="true"-->
            <!--android:maxLines="1"-->
            <!--android:padding="10dp"-->
            <!--android:text="@string/accept_button_text"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@color/icons"-->
            <!--android:textStyle="italic"-->
            <!--app:autoSizeTextType="uniform"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@id/chat_toolbar_wrapper"-->
            <!--tools:layout_editor_absoluteX="115dp"-->
            <!--tools:layout_editor_absoluteY="1047dp"-->
            <!--android:visibility="gone"/>-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:windowSoftInputMode="adjustResize"
            app:layout_constraintBottom_toTopOf="@+id/user_input_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chat_toolbar_wrapper">

        </androidx.recyclerview.widget.RecyclerView>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_input_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="11dp"
            android:background="@drawable/round_text_box"
            android:inputType="textMultiLine"
            android:maxLength="256"
            android:maxLines="6"
            android:padding="10dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send_button"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/message_box_hint"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_send_purple_vector" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/enlarged_item_pic_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/enlarged_item_pic_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#960b040b"
            android:visibility="gone"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/enlarged_item_pic_toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center"
                android:maxLines="2"
                android:textAlignment="gravity"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeTextType="uniform" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/fullscreen_image_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.ortiz.touchview.TouchImageView
            android:id="@+id/item_image_fullscreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>