...
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/enlarged_item_info_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/enlarged_item_info_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#960b040b"
            android:visibility="gone"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="">
...
        android:layout_height="360dp"
        android:layout_below="@+id/item_info_toolbar_layout"
        android:background="@color/colorPrimaryLite"
        android:scaleType="center" />

    <ScrollView
        android:id="@+id/item_info_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/request_button_layout"
        android:layout_below="@id/item_info_toolbar_layout"
        android:clickable="true"
        android:focusable="true">
...
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <View
                android:id="@+id/image_space"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/item_info_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_space"
                android:background="@android:color/white">

                <androidx.appcompat.widget.AppCompatTextView
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/requested_by_list_text">

                </com.syv.takecare.takecare.customViews.FeedRecyclerView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/send_message_button"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="24dp"
...
