<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/taker_feed_card"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:clickable="true"
            android:focusable="true"
            card_view:cardElevation="1dp"
            card_view:cardMaxElevation="8dp"
...
